--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <ul class="tabs">
                 <li><a href="#" data-tab="home">Home</a></li>
                 <li><a href="#" data-tab="blog">Blog</a></li>
+                <li><a href="#" data-tab="retro-banners">♡</a></li>
                 <li><a href="#" data-tab="socials">Socials</a></li>
                 <li><a href="#" data-tab="contact">Contact</a></li>
             </ul>
@@ -35,10 +36,16 @@
             </div>
             <div class="info-box">
                 <div id="home" class="tab-content">
-                    <p>Hello and welcome to my 5MB of the internet! I'm Joshua, a self-taught developer with a passion for creating innovative projects. When I'm not coding, you might find me spending time staring at my favorite animals capybaras and dogs or watching anime. Explore my projects and learn more about my tech journey and personal interests!</p>
+                    <p>Hello and welcome to my 1MB of the internet! I'm Joshua, a self-taught developer with a passion for creating innovative projects. When I'm not coding, you might find me spending time staring at my favorite animals capybaras and dogs or watching anime. Explore my projects and learn more about my tech journey and personal interests!</p>
                 </div>
                 <div id="blog" class="tab-content">
                     <p>soon tm</p>
+                </div>
+                <div id="retro-banners" class="tab-content">
+                    <a href="https://512kb.club">
+                        <img src="https://512kb.club/assets/images/blue-team.gif" alt="a proud member of the blue team of 512KB club" />
+                    </a>
+                    <p class="bottom-text">MSG me on discord to trade banners. <img style="width: 65px; height: 20px;" src="retro-banner.png"></p>
                 </div>
                 <div id="socials" class="tab-content">
                     <div class="social-info">
