added scroll to x nav bar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#" data-tab="home">Home</a></li>
                 <li><a href="#" data-tab="blog">Blog</a></li>
                 <li><a href="#" data-tab="retro-banners">♡</a></li>
+                <li><a href="#" data-tab="portfolio">Portfolio</a></li>
                 <li><a href="#" data-tab="socials">Socials</a></li>
                 <li><a href="#" data-tab="contact">Contact</a></li>
             </ul>
@@ -46,6 +47,9 @@
                         <img src="https://512kb.club/assets/images/blue-team.gif" alt="a proud member of the blue team of 512KB club" />
                     </a>
                     <p class="bottom-text">MSG me on discord to trade banners. <img style="width: 65px; height: 20px;" src="retro-banner.png"></p>
+                </div>
+                <div id="portfolio" class="tab-content">
+                    <p>soon tm</p>
                 </div>
                 <div id="socials" class="tab-content">
                     <div class="social-info">
