--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="social-info">
                         <div class="contact-item">
                             <div class="social-service">MAL</div>
-                            <div class="social-name"><a href="https://myanimelist.net/profile/Joshua" target="_blank">me@joshua.rip</a></div>
+                            <div class="social-name"><a href="https://myanimelist.net/profile/Joshua" target="_blank">Joshua</a></div>
                         </div>
                         <div class="social-item">
                             <div class="social-service">Github</div>
