added glow to status

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="profile-info">
                     <div class="profile-status">
                         <div class="status-indicator" id="status-indicator"></div>
-                        <div class="name">‎ Joshua - 22</div>
+                        <div class="name">‎ Joshua - 22</div><p class="footer">d</p>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,6 @@
                             <div class="contact-service">Discord</div>
                             <div class="contact-name"><a href="https://discord.com/users/442142462857707520" target="_blank">@joshua.rip</a></div>
                         </div>
-                        
                     </div>
                 </div>
             </div>
