added oneko.js and moved files to folders

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua.rip</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script src="assets/js/oneko.js"></script>
     <div class="container">
         <div class="navbar">
             <div class="tab-name" id="tab-name">Home</div>
@@ -31,7 +32,7 @@
                 <div class="profile-info">
                     <div class="profile-status">
                         <div class="status-indicator" id="status-indicator"></div>
-                        <div class="name">‎ Joshua - 22</div><p class="footer">d</p>
+                        <div class="name">‎ Joshua - 22</div>
                     </div>
                 </div>
             </div>
@@ -46,7 +47,7 @@
                     <a href="https://512kb.club">
                         <img src="https://512kb.club/assets/images/blue-team.gif" alt="a proud member of the blue team of 512KB club" />
                     </a>
-                    <p class="bottom-text">MSG me on discord to trade banners. <img style="width: 65px; height: 20px;" src="retro-banner.png"></p>
+                    <p class="bottom-text">MSG me on discord to trade banners. <img style="width: 65px; height: 20px;" src="assets/images/retro-banner.png"></p>
                 </div>
                 <div id="portfolio" class="tab-content">
                     <p>soon tm</p>
@@ -78,6 +79,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="https://raw.githubusercontent.com/adryd325/oneko.js/main/oneko.gif"></script>
 </body>
 </html>
