added retro banners

--- a/index.html
+++ b/index.html
@@ -44,10 +44,88 @@
                     <p>soon tm</p>
                 </div>
                 <div id="retro-banners" class="tab-content">
+                    <div class="retro-info">
                     <a href="https://512kb.club">
                         <img src="https://512kb.club/assets/images/blue-team.gif" alt="a proud member of the blue team of 512KB club" />
                     </a>
-                    <p class="bottom-text">MSG me on discord to trade banners. <img style="width: 65px; height: 20px;" src="assets/images/retro-banner.png"></p>
+                    <a href="https://Joshua.rip">
+                        <img src="assets/images/retro-banner-gif.gif" alt="Joshua.rip" />
+                    </a>
+                        <img src="https://anlucas.neocities.org/anydamn.gif" alt="any damn browser" />
+                    <a href="https://www.drpepper.com/s/">
+                        <img src="https://anlucas.neocities.org/drpepper.gif" alt="Dr Pepper" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/free_microsoft_internet_exploder.gif" alt="Ew internet explorer" />
+                    </a>
+                    <a href="https://google.com">
+                        <img src="https://anlucas.neocities.org/google_25wht.gif" alt="Google" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/hatems.jpg" alt="I hate Microsoft" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/hatemac.jpg" alt="I hate Mac" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/html.gif" alt="Learn HTML" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/ieisevil.gif" alt="Internet Explorer is evil" />
+                    </a>
+                    <a href="https://www.kraftheinz.com/koolaid">
+                        <img src="https://anlucas.neocities.org/koolaid.gif" alt="Koolaid" />
+                    </a>
+                    <a href="https://www.linux.org/">
+                        <img src="https://anlucas.neocities.org/linux_now.gif" alt="Linux" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/lol.gif" alt="LOL" />
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/Microsoft_Windows">
+                        <img src="https://anlucas.neocities.org/made_with_windows.gif" alt="Made With Windows" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/notepad2.gif" alt="Made With Notepad" />
+                    </a>
+                    <a href="https://www.nvidia.com/en-us/">
+                        <img src="https://anlucas.neocities.org/nvidia.gif" alt="Nividia" />
+                    </a>
+                    <a href="https://www.win-rar.com/">
+                        <img src="https://anlucas.neocities.org/rararchiverlogo.gif" alt="Win-rar" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/r1Vote23.gif" alt="Vote" />
+                    </a>
+                    <a href="https://www.gnu.org/software/wget/">
+                        <img src="https://anlucas.neocities.org/wget.gif" alt="WGET" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/win98_89.gif" alt="Windows 98" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/wizardb.gif" alt="Gif Wizard" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/wmp.gif" alt="Windows Media Player" />
+                    </a>
+                    <a href="#">
+                        <img src="https://anlucas.neocities.org/FreewareGuide.gif" alt="Freeware" />
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/Silicon_Valley">
+                        <img src="https://anlucas.neocities.org/geocities_silicon_valley01.gif" alt="Silicon Valley" />
+                    </a>
+                    <a href="https://www.java.com/">
+                        <img src="https://anlucas.neocities.org/get_java.gif" alt="Java" />
+                    </a>
+                    <a href="https://gmail.com">
+                        <img src="https://anlucas.neocities.org/gmail.gif" alt="Gmail" />
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/Game_Boy_Advance">
+                        <img src="https://anlucas.neocities.org/gameboy_advance_net.gif" alt="Gameboy" />
+                    </a>
+                </div>
+                    <p class="bottom-text">MSG me on discord to trade banners.</p>
                 </div>
                 <div id="portfolio" class="tab-content">
                     <p>soon tm</p>
