fixed white flashing on profile picture

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
                         <a href="https://Joshua.rip">
                             <img src="assets/images/new-retro-banner.gif" alt="Joshua.rip" />
                         </a>
+                        <a href="https://discord.com">
+                            <img src="assets/images/discord.gif" alt="Use Discord" />
+                        </a>
+                        <a href="https://ublockorigin.com/">
+                            <img src="assets/images/ublock.png" alt="Use ublock origin" />
+                        </a>
+                        <a href="https://code.visualstudio.com/">
+                            <img src="assets/images/vsc.gif" alt="Use Visual Studio Code" />
+                        </a>
                         <a href="https://512kb.club">
                             <img src="https://512kb.club/assets/images/blue-team.gif" alt="a proud member of the blue team of 512KB club" />
                         </a>
@@ -85,17 +94,11 @@
                         <a href="https://en.wikipedia.org/wiki/Microsoft_Windows">
                             <img src="https://anlucas.neocities.org/made_with_windows.gif" alt="Made With Windows" />
                         </a>
-                        <a href="#">
-                            <img src="https://anlucas.neocities.org/notepad2.gif" alt="Made With Notepad" />
-                        </a>
                         <a href="https://www.nvidia.com/en-us/">
                             <img src="https://anlucas.neocities.org/nvidia.gif" alt="Nividia" />
                         </a>
                         <a href="https://www.win-rar.com/">
                             <img src="https://anlucas.neocities.org/rararchiverlogo.gif" alt="Win-rar" />
-                        </a>
-                        <a href="#">
-                            <img src="https://anlucas.neocities.org/r1Vote23.gif" alt="Vote" />
                         </a>
                         <a href="https://www.gnu.org/software/wget/">
                             <img src="https://anlucas.neocities.org/wget.gif" alt="WGET" />
@@ -108,9 +111,6 @@
                         </a>
                         <a href="#">
                             <img src="https://anlucas.neocities.org/wmp.gif" alt="Windows Media Player" />
-                        </a>
-                        <a href="#">
-                            <img src="https://anlucas.neocities.org/FreewareGuide.gif" alt="Freeware" />
                         </a>
                         <a href="https://en.wikipedia.org/wiki/Silicon_Valley">
                             <img src="https://anlucas.neocities.org/geocities_silicon_valley01.gif" alt="Silicon Valley" />
@@ -152,12 +152,15 @@
                             <div class="contact-service">Discord</div>
                             <div class="contact-name"><a href="https://discord.com/users/442142462857707520" target="_blank">@joshua.rip</a></div>
                         </div>
+                        <div class="contact-item">
+                            <div class="contact-service">Matrix</div>
+                            <div class="contact-name">@8j:matrix.org</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <script src="assets/js/script.js"></script>
-    <script src="https://raw.githubusercontent.com/adryd325/oneko.js/main/oneko.gif"></script>
 </body>
 </html>
