added new 88x31 and steam

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div id="retro-banners" class="tab-content">
                     <div class="retro-info">
                         <a href="https://Joshua.rip">
-                            <img src="assets/images/new-retro-banner.gif" alt="Joshua.rip" />
+                            <img src="assets/images/88x31.gif" alt="Joshua.rip" />
                         </a>
                         <a href="https://discord.com">
                             <img src="assets/images/discord.gif" alt="Use Discord" />
@@ -136,6 +136,10 @@
                         <div class="social-item">
                             <div class="social-service">Github</div>
                             <div class="social-name"><a href="https://github.com/t84" target="_blank">t84</a></div>
+                        </div>
+                        <div class="social-item">
+                            <div class="social-service">Steam</div>
+                            <div class="social-name"><a href="https://steamcommunity.com/id/Joshua545/" target="_blank">Joshua545</a></div>
                         </div>
                     </div>
                 </div>
