--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                         <a href="https://Joshua.rip">
                             <img src="assets/images/88x31.gif" alt="Joshua.rip" />
                         </a>
+                        <a href="https://getminted.cc">
+                            <img src="assets/images/mint.png" alt="getminted.cc" />
+                        </a>
                         <a href="https://discord.com">
                             <img src="assets/images/discord.gif" alt="Use Discord" />
                         </a>
