--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                     <p>Hello and welcome to my 1MB of the internet! I'm Joshua, a self-taught developer with a passion for creating innovative projects. When I'm not coding, you might find me spending time staring at my favorite animals capybaras and dogs or watching anime. Explore my projects and learn more about my tech journey and personal interests!</p>
                 </div>
                 <div id="blog" class="tab-content">
-                    <p>soon tm</p>
+                    <div class="blog-info">
+                        
+                    </div>
                 </div>
                 <div id="retro-banners" class="tab-content">
                     <div class="retro-info">
